cmss/main/default/objects/Contact/fields/AgentActivityType__c.field-meta.xml
<CustomField>
    <fullName>AgentActivityType__c</fullName>
    <label>Agent Activity Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>