cmss/main/default/objects/Contact/fields/CommissionAccountBase__c.field-meta.xml
<CustomField>
    <fullName>CommissionAccountBase__c</fullName>
    <label>Commission Account Base</label>
    <length>15</length>
    <type>Text</type>
</CustomField>