cmss/main/default/objects/Contact/fields/CooperationPartnerType__c.field-meta.xml
<CustomField>
    <fullName>CooperationPartnerType__c</fullName>
    <label>Cooperation Partner Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>