cmss/main/default/objects/Contact/fields/IsAgentActive__c.field-meta.xml
<CustomField>
    <fullName>IsAgentActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agent Active</label>
    <type>Checkbox</type>
</CustomField>